--- a/workout/HomeWorkout.html
+++ b/workout/HomeWorkout.html
@@ -79,6 +79,10 @@
           <!--ml sta per margin left (spacing in bootstrap)-->
 
         </li>
+         <li class="nav-item text-center">
+          <a class="nav-item nav-link" href="pagine/Contatta.html">Contatta allenatore</a>
+
+        </li>
       </ul>
       <!-- Tasto Logout -->
       <div class="text-center">
