--- a/workout/pagine/Schede.html
+++ b/workout/pagine/Schede.html
@@ -64,6 +64,10 @@
           <!--ml sta per margin left (spacing in bootstrap)-->
 
         </li>
+        <li class="nav-item text-center">
+          <a class="nav-item nav-link" href="Contatta.html">Contatta allenatore</a>
+
+        </li>
       </ul>
       <!-- Tasto Logout -->
       <div class="text-center">
