Aggiunto form recupera password, modificato form contattaci

--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                                 </div>
                                 <div class="input-group mb-1 mt-3">
                                     <div class="input-group-prepend">
+                                       <div>Password dimenticata? Clicca <a href="#"
+                                         id="forgot-button">qui</a>!</a>
+                                        </div>
+                                    </div>    
+                                    <div class="input-group-prepend">
                                         <!-- Bottone che triggera le funzioni javascript per il cambiamento della form mostra_registrazione-->
                                         <div>Non hai un account? Effettua la <a href="#"
                                                 id="registr-button">registrazione</a>!</a>
