Tolto hobby, modificata home, modificato nome pagina film, spostati minigiochi

--- a/intrattenimento/HomeIntrattenimento.html
+++ b/intrattenimento/HomeIntrattenimento.html
@@ -57,7 +57,7 @@
                 </li>
                 <!--Film e serie-->
                 <li class="nav-item">
-                 <a class="nav-link" href="pagine/FilmSerieTV.html">Film e serie TV</a>
+                 <a class="nav-link" href="pagine/FilmSerieTV.html">Piattaforme streaming</a>
                     <!--Link mancante-->
                 </li>
                 <!--Musica-->
@@ -67,7 +67,7 @@
                 </li>
                 <!--Videogiochi-->
                 <li class="nav-item">
-                    <a class="nav-link" href="pagine/Videogiochi.html">Videogiochi</a>
+                    <a class="nav-link" href="pagine/Passatempo.html">Minigiochi</a>
                     <!--Link mancante-->
                 </li>
             </ul>
@@ -93,7 +93,7 @@
                     alt=""></a>
             <div class="card-body">
                 <a href="pagine/FilmSerieTV.html">
-                    <h5 class="card-title">Film e serie TV</h5>
+                    <h5 class="card-title">Piattaforme streaming</h5>
                 </a>
                 <p class="card-text">In questa sezione troverai moltissime piattaforme che forniscono film e serie TV, per non annoiarti mai!
                 </p>
@@ -112,13 +112,13 @@
         </div>
         <!--Terza card (Videogiochi)-->
         <div class="card">
-            <a href="pagine/Videogiochi.html"><img src="../assets/img/intrattenimento//Home4.jpg" class="card-img-top"
+            <a href="pagine/Passatempo.html"><img src="../assets/img/hobby/Home3.jpg" class="card-img-top"
                     alt=""></a>
             <div class="card-body">
-                <a href="pagine/Videogiochi.html">
-                    <h5 class="card-title">Videogiochi</h5>
+                <a href="pagine/Passatempo.html">
+                    <h5 class="card-title">Minigiochi</h5>
                 </a>
-                <p class="card-text">Sei un videogamer? Prova questi titoli, non te ne pentirai!</p>
+                <p class="card-text">Ti piacciono i minigiochi? Prova questi titoli, non te ne pentirai!</p>
             </div>
         </div>
     </div>
