--- a/intrattenimento/pagine/FilmSerieTV.html
+++ b/intrattenimento/pagine/FilmSerieTV.html
@@ -52,7 +52,7 @@
                 </li>
                 <!--Film e serie-->
                 <li class="nav-item active">
-                    <a class="nav-link" href="FilmSerieTV.html">Film e serie TV</a>
+                    <a class="nav-link" href="FilmSerieTV.html">Piattaforme streaming</a>
                 </li>
                 <!--Musica -->
                 <li class="nav-item">
@@ -60,7 +60,7 @@
                 </li>
                 <!--Videogame-->
                 <li class="nav-item">
-                    <a class="nav-link" href="Videogiochi.html">Videogiochi</a>
+                    <a class="nav-link" href="Passatempo.html">Minigiochi</a>
                 </li>
             </ul>
             <!-- Tasto Logout -->
