--- a/intrattenimento/pagine/Musica.html
+++ b/intrattenimento/pagine/Musica.html
@@ -47,7 +47,7 @@
                     </li>
                     <!--Film e serie-->
                     <li class="nav-item">
-                    <a class="nav-link" href="FilmSerieTV.html">Film e serie TV</a>
+                    <a class="nav-link" href="FilmSerieTV.html">Piattaforme streaming</a>
                         <!--Link mancante-->
                     </li>
                     <!--Musica-->
@@ -57,7 +57,7 @@
                     </li>
                     <!--Videogiochi-->
                     <li class="nav-item">
-                        <a class="nav-link" href="Videogiochi.html">Videogiochi</a>
+                        <a class="nav-link" href="Passatempo.html">Minigiochi</a>
                         <!--Link mancante-->
                     </li>
                 </ul>
