--- a/intrattenimento/pagine/Passatempo.html
+++ b/intrattenimento/pagine/Passatempo.html
@@ -43,15 +43,21 @@
             <ul class="navbar-nav mr-auto text-center">
                 <!--Home-->
                 <li class="nav-item">
-                    <a class="nav-link" href="../HomeHobby.html">Home</a>
+                    <a class="nav-link" href="../HomeIntrattenimento.html">Home</a>
                 </li>
-                <!--Fai da te-->
+                <!--Film e serie-->
                 <li class="nav-item">
-                    <a class="nav-link" href="FaiDaTe.html">Fai da te</a>
+                 <a class="nav-link" href="FilmSerieTV.html">Piattaforme streaming</a>
+                    <!--Link mancante-->
+                </li>
+                <!--Musica-->
+                <li class="nav-item">
+                    <a class="nav-link" href="Musica.html">Musica</a>
+                    <!--Link mancante-->
                 </li>
                 <!--Passatempo -->
                 <li class="nav-item">
-                    <a class="nav-link active" href="Passatempo.html">Passatempo</a>
+                    <a class="nav-link active" href="Passatempo.html">Minigiochi</a>
                     <!--Link mancante-->
                 </li>
             </ul>
