bottone accesso con google, modificato nome bottoni compara

--- a/intrattenimento/pagine/FilmSerieTV.html
+++ b/intrattenimento/pagine/FilmSerieTV.html
@@ -71,7 +71,7 @@
     </nav>
 
     <!-- TITOLO -->
-    <h1 class="text-center text-light">Film e serie TV</h1>
+    <h1 class="text-center text-light">Piattaforme streaming</h1>
 
 
     <!-- CONTENUTO PAGINA -->
@@ -117,7 +117,7 @@
             </div>
             <!-- Bottone a destra della card -->
             <div class="button-div">
-                <button type="button" class="btn btn-outline-light side-button side-button-active">Compara</button>
+                <button type="button" class="btn btn-outline-light side-button side-button-active">Dettagli</button>
             </div>
         </div>
 
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <div class="button-div">
-                <button type="button" class="btn btn-outline-light side-button">Compara</button>
+                <button type="button" class="btn btn-outline-light side-button">Dettagli</button>
             </div>
         </div>
 
@@ -186,7 +186,7 @@
                 </div>
             </div>
             <div class="button-div">
-                <button type="button" class="btn btn-outline-light side-button">Compara</button>
+                <button type="button" class="btn btn-outline-light side-button">Dettagli</button>
             </div>
         </div>
 
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <div class="button-div">
-                <button type="button" class="btn btn-outline-light side-button">Compara</button>
+                <button type="button" class="btn btn-outline-light side-button">Dettagli</button>
             </div>
         </div>
 
@@ -256,7 +256,7 @@
                 </div>
             </div>
             <div class="button-div">
-                <button type="button" class="btn btn-outline-light side-button">Compara</button>
+                <button type="button" class="btn btn-outline-light side-button">Dettagli</button>
             </div>
         </div>
 
@@ -290,7 +290,7 @@
                 </div>
             </div>
             <div class="button-div">
-                <button type="button" class="btn btn-outline-light side-button">Compara</button>
+                <button type="button" class="btn btn-outline-light side-button">Dettagli</button>
             </div>
         </div>
 
@@ -326,7 +326,7 @@
                 </div>
             </div>
             <div class="button-div">
-                <button type="button" class="btn btn-outline-light side-button">Compara</button>
+                <button type="button" class="btn btn-outline-light side-button">Dettagli</button>
             </div>
         </div>
     </div>
