--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </button>
                     </div>
                     <!-- le text area nel corpo-->
-                    <div class="modal-body">
+                    <div class="modal-body" id="boxform">
                         <!-- la form manda i dati al file php che comunica con il DB-->
                         <form id="form-login" class="needs-validation" action="php/validateLogin.php" method="POST" name="form-login" onsubmit="">
                             <!-- Form di Login (per default) poi cambiato da funzioni javascript tramite id-->
@@ -112,7 +112,23 @@
                                     </div>
                                 </div>
                             </div>
-                        </form>
+                            <br>
+                            <h5 style="text-align: center;">Oppure</h5>
+                            <div class="row"> 
+                              <div class="col-sm-12" align="center">
+                                <!--BOTTONE GOOGLE-->  
+                                <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+                                <a href="#">
+                                <div class="google-btn">
+                                  <div class="google-icon-wrapper">
+                                    <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
+                                  </div>
+                                  <p class="btn-text"><b>Accedi con google</b></p>
+                                </div>
+                                </a>
+                              </div>                                
+                            </div>                               
+                        </form>    
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
