--- a/cucina/pagine/Imparare.html
+++ b/cucina/pagine/Imparare.html
@@ -72,6 +72,10 @@
   <!--SIDEBAR-->
   <div class="sidebar"> <!-- prima colonna divisa in 2 righe-->
     <!--range slider-->
+    <!--BREADCRUMB-->
+    <div class="container-fluid" style="margin-top: 1rem;">
+      <div class="row"><h6 style="margin-left: 5px;"><a href="../HomeCucina.html">Cucina</h6></a> <h6 style="color:#0000EE">></h6> <h6><a href="#">Imparare</a></h6></div>
+    </div>    
 
     <div class="slidecontainer"> <!-- prima riga con il filtra per prezzo-->
       <h2>Filtra per prezzo</h2>
