--- a/intrattenimento/pagine/Musica.html
+++ b/intrattenimento/pagine/Musica.html
@@ -26,7 +26,7 @@
     </head>
     <body>
         <!--NAVBAR-->
-        <nav class="sticky-top navbar-expand-lg navbar navbar-dark bg-dark">
+        <nav class="sticky-top navbar-expand-lg navbar navbar-dark bg-dark mb-3">
             <!--Logo-->
             <a class="navbar-brand" href="../../index.html"><img src="../../assets/img/logo.png" width="60" height="60"
                     alt="" /></a>
@@ -67,7 +67,10 @@
                 </div>
             </div>
         </nav>
-
+    <!--BREADCRUMB-->
+    <div class="container-fluid">
+        <div class="row"><h6 style="margin-left: 5px;"><a href="../HomeIntrattenimento.html">Intrattenimento</h6></a> <h6 style="color:#0000EE">></h6> <h6><a href="#">Musica</a></h6></div>
+    </div>
         <!--SEZIONE YOUTUBE-->
         <div class="youtube">
             <div class="ricerca">
