--- a/intrattenimento/pagine/FilmSerieTV.html
+++ b/intrattenimento/pagine/FilmSerieTV.html
@@ -69,7 +69,10 @@
             </div>
         </div>
     </nav>
-
+    <!--BREADCRUMB-->
+    <div class="container-fluid">
+    <div class="row"><h6 style="margin-left: 5px;"><a href="../HomeIntrattenimento.html">Intrattenimento</h6></a> <h6 style="color:#0000EE">></h6> <h6><a href="#">Piattaforme streaming</a></h6></div>
+    </div>
     <!-- TITOLO -->
     <h1 class="text-center text-light">Piattaforme streaming</h1>
 
