--- a/intrattenimento/pagine/Passatempo.html
+++ b/intrattenimento/pagine/Passatempo.html
@@ -26,7 +26,7 @@
 
 <body>
     <!--NAVBAR-->
-    <nav class="sticky-top navbar-expand-lg navbar navbar-dark bg-dark">
+    <nav class="sticky-top navbar-expand-lg navbar navbar-dark bg-dark mb-3">
         <!--Logo-->
         <a class="navbar-brand" href="../../index.html"><img src="../../assets/img/logo.png" width="60" height="60"
                 alt="" /></a>
@@ -67,6 +67,10 @@
             </div>
         </div>
     </nav>
+    <!--BREADCRUMB-->
+    <div class="container-fluid">
+        <div class="row"><h6 style="margin-left: 5px;"><a href="../HomeIntrattenimento.html">Intrattenimento</h6></a> <h6 style="color:#0000EE">></h6> <h6><a href="#">Minigiochi</a></h6></div>
+    </div>    
     <div class="topbar mb-2">
         <div class="dropdown">
             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
