--- a/workout/HomeWorkout.html
+++ b/workout/HomeWorkout.html
@@ -48,7 +48,7 @@
   <!--navbar-dark e bg-dark per il tema scuro, p è il padding e mb margin-bottom , rounded bho-->
 
   <!--Navbar-->
-  <nav class="sticky-top navbar-expand-lg navbar navbar-dark bg-dark shadow-lg mb-3 rounded" style="width:100%;">
+  <nav class="navbar-expand-lg navbar navbar-dark bg-dark">
 
     <!--Logo-->
     <a class="navbar-brand" href="../index.html">
