--- a/workout/pagine/Contatta.html
+++ b/workout/pagine/Contatta.html
@@ -23,7 +23,7 @@
         <!--PRIMA Navbar-->
 
   <!-- fixed top la tiene ferma in alto anche mentre scrollo-->
-  <nav id="nav-fixed" class="fixed-top navbar-expand-lg navbar navbar-dark bg-dark shadow-lg rounded mt-0">
+  <nav id="nav-fixed" class="sticky-top navbar-expand-lg navbar navbar-dark bg-dark mb-3">
 
     <!--Logo-->
     <a class="navbar-brand" href="../../index.html">
@@ -64,7 +64,10 @@
       </div>
     </div>
   </nav>
-
+  <!--BREADCRUMB-->
+  <div class="container-fluid">
+      <div class="row"><h6 style="margin-left: 5px;"><a href="../HomeWorkout.html" style="color: aliceblue;">Workout</h6></a> <h6 style="color:aliceblue;">></h6> <h6><a href="#" style="color: aliceblue;">Contatta allenatore</a></h6></div>
+  </div>
    <!--finite le navbar metto il titolo-->
    <h1 class="title text-center text-light">Complila il form per contattare l'allenatore</h1>
 
