--- a/workout/pagine/Esercizi.html
+++ b/workout/pagine/Esercizi.html
@@ -33,7 +33,7 @@
   <!--PRIMA Navbar-->
 
   <!-- fixed top la tiene ferma in alto anche mentre scrollo-->
-  <nav id="nav-fixed" class="sticky-top navbar-expand-lg navbar navbar-dark bg-dark shadow-lg rounded mt-0">
+  <nav id="nav-fixed" class="sticky-top navbar-expand-lg navbar navbar-dark bg-dark">
 
     <!--Logo-->
     <a class="navbar-brand" href="../../index.html">
@@ -128,7 +128,10 @@
 
   </nav>
 
-
+<!--BREADCRUMB-->
+<div class="container-fluid" style="margin-top: 5rem;">
+    <div class="row"><h6 style="margin-left: 5px;"><a href="../HomeWorkout.html" style="color: aliceblue;">Workout</h6></a> <h6 style="color:aliceblue;">></h6> <h6><a href="#" style="color: aliceblue;">Esercizi</a></h6></div>
+</div>
 
   <!--finite le navbar metto il titolo-->
   <h1 class="title text-center text-light">Esercizi</h1>
