--- a/workout/pagine/Schede.html
+++ b/workout/pagine/Schede.html
@@ -33,7 +33,7 @@
   <!--PRIMA Navbar-->
 
   <!-- sticky top la tiene ferma in alto anche mentre scrollo-->
-  <nav id="nav-fixed" class="sticky-top navbar-expand-lg navbar navbar-dark bg-dark shadow-lg rounded mt-0">
+  <nav id="nav-fixed" class="sticky-top navbar-expand-lg navbar navbar-dark bg-dark">
 
     <!--Logo-->
     <a class="navbar-brand" href="../../index.html">
@@ -100,6 +100,11 @@
       </ul>
     </div>
   </nav>
+
+<!--BREADCRUMB-->
+<div class="container-fluid" style="margin-top: 5rem;">
+  <div class="row"><h6 style="margin-left: 5px;"><a href="../HomeWorkout.html" style="color: aliceblue;">Workout</h6></a> <h6 style="color:aliceblue;">></h6> <h6><a href="#" style="color: aliceblue;">Schede</a></h6></div>
+</div>  
 
   <!--finite le navbar metto il titolo-->
   <h1 class="title text-center text-light ">Schede</h1>
