--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </form>    
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Chiudi</button>
                         <button id="form-submit" name="form-submit-button" type="sbmit" class="btn btn-primary" form="form-login">Login</button>
                     </div>
                 </div>
