home rimanda alla homepage, aggiunto bottone registrazione, rimossa frase piattaforme streaming, risolto messaggio recupera password

--- a/cucina/HomeCucina.html
+++ b/cucina/HomeCucina.html
@@ -50,8 +50,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">  <!--l'id serve a far puntare queste voci di menu al pulsante della navbar ridimensionata-->
                 <ul class="navbar-nav mr-auto text-center">
                     <!--Home-->
-                    <li class="nav-item active">
-                        <a class="nav-link" href="HomeCucina.html">Home</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <!--Imparare-->
                     <li class="nav-item">
