--- a/cucina/pagine/Cucinare.html
+++ b/cucina/pagine/Cucinare.html
@@ -55,7 +55,7 @@
         <ul class="navbar-nav mr-auto text-center">
             <!--Home-->
             <li class="nav-item">
-                <a class="nav-link" href="../HomeCucina.html">Home</a>
+                <a class="nav-link" href="../../index.html">Home</a>
             </li>
             <!--Imparare-->
             <li class="nav-item">
