--- a/intrattenimento/HomeIntrattenimento.html
+++ b/intrattenimento/HomeIntrattenimento.html
@@ -52,8 +52,8 @@
             <!--l'id serve a far puntare queste voci di menu al pulsante della navbar ridimensionata-->
             <ul class="navbar-nav mr-auto text-center">
                 <!--Home-->
-                <li class="nav-item active">
-                    <a class="nav-link" href="HomeIntrattenimento.html">Home</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <!--Film e serie-->
                 <li class="nav-item">
