--- a/intrattenimento/pagine/FilmSerieTV.html
+++ b/intrattenimento/pagine/FilmSerieTV.html
@@ -48,7 +48,7 @@
             <ul class="navbar-nav mr-auto text-center">
                 <!--Home-->
                 <li class="nav-item">
-                    <a class="nav-link" href="../HomeIntrattenimento.html">Home</a>
+                    <a class="nav-link" href="../../index.html">Home</a>
                 </li>
                 <!--Film e serie-->
                 <li class="nav-item active">
@@ -367,9 +367,6 @@
             </div>
         </div>
     </div>
-
-
-    <h2 class="m-2 mt-3 text-light text-center">Compara i nostri servizi per scegliere il più adatto a te!</h2>
 
     <div id="confronto" class="m-2">
         <!-- ZONA COMPARAZIONE riempita dinamicamente da javascript-->
