--- a/intrattenimento/pagine/Passatempo.html
+++ b/intrattenimento/pagine/Passatempo.html
@@ -43,7 +43,7 @@
             <ul class="navbar-nav mr-auto text-center">
                 <!--Home-->
                 <li class="nav-item">
-                    <a class="nav-link" href="../HomeIntrattenimento.html">Home</a>
+                    <a class="nav-link" href="../../index.html">Home</a>
                 </li>
                 <!--Film e serie-->
                 <li class="nav-item">
