--- a/workout/pagine/Contatta.html
+++ b/workout/pagine/Contatta.html
@@ -43,7 +43,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto text-center">
         <li class="nav-item">
-          <a class="nav-item nav-link" href="../HomeWorkout.html">Home </a>
+          <a class="nav-item nav-link" href="../../index.html">Home </a>
           <!-- <span class="sr-only">(current)</span> -->
 
         </li>
@@ -149,8 +149,8 @@
     </label>
   </div>
   <div class="form-check">
-    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-    <label class="form-check-label" for="flexRadioDefault2">
+    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+    <label class="form-check-label" for="flexRadioDefault3">
       Voglio prenotare un allenamento con il personal trainer
     </label>
   </div>
