--- a/workout/pagine/Esercizi.html
+++ b/workout/pagine/Esercizi.html
@@ -51,7 +51,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto text-center">
         <li class="nav-item">
-          <a class="nav-item nav-link" href="../HomeWorkout.html">Home </a>
+          <a class="nav-item nav-link" href="../../index.html">Home </a>
           <!-- <span class="sr-only">(current)</span> -->
 
         </li>
