--- a/cucina/pagine/Imparare.html
+++ b/cucina/pagine/Imparare.html
@@ -47,7 +47,7 @@
       <ul class="navbar-nav mr-auto text-center">
         <!--Home-->
         <li class="nav-item">
-          <a class="nav-link" href="../HomeCucina.html">Home</a>
+          <a class="nav-link" href="../../index.html">Home</a>
         </li>
         <!--Imparare-->
         <li class="nav-item active">
