--- a/workout/HomeWorkout.html
+++ b/workout/HomeWorkout.html
@@ -66,8 +66,8 @@
       <!--l'id serve a far puntare queste voci di menu al pulsante della navbar ridimensionata-->
 
       <ul class="navbar-nav mr-auto text-center">
-        <li class="nav-item text-center active">
-          <a class="nav-item nav-link active" href="#">Home </a><!-- <span class="sr-only">(current)</span> -->
+        <li class="nav-item text-center">
+          <a class="nav-item nav-link" href="../index.html">Home </a><!-- <span class="sr-only">(current)</span> -->
 
         </li>
         <li class="nav-item text-center">
